# py-design-patterns

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
patterns/: __main__.py  application.py
patterns/behavioral/: __init__.py
patterns/creational/: __init__.py  abstract_factory.py  builder.py  factory_method.py  singleton.py
patterns/structural/: __init__.py
patterns/utils/: menu.py
